--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,5 +1,9 @@
 @model IEnumerable<PatientManagementSystem.Models.Admin>
 
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <h2>Administradores</h2>
 
 <div class="d-flex justify-content-between mb-3">
