--- a/Views/Patients/AdjustFace.cshtml
+++ b/Views/Patients/AdjustFace.cshtml
@@ -1,5 +1,9 @@
 @model PatientManagementSystem.Models.Patient
 
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <h2>Ajustar Cara para @Model.Name</h2>
 
 <button id="generate-model" class="btn btn-primary">Generar Modelo 3D</button>
