--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<PatientManagementSystem.Models.Patient>
 
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
 <h1 class="mb-4">Listado de Pacientes</h1>
 
 <div class="mb-3">
