--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             }
 
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" asp-route-session_id="@sessionId">Pacientes</a>
+                                <a class="nav-link" asp-area="" asp-controller="Patients" asp-action="Index" asp-route-session_id="@sessionId">Pacientes</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Index" asp-route-session_id="@sessionId">Citas</a>
