--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,12 @@
 </head>
 <body>
 
-    @if (!string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session?.GetString("AdminLoggedIn")))
+
+   @{
+     var sessionValue = HttpContextAccessor.HttpContext?.Session?.GetString("AdminLoggedIn");
+    }             
+
+    @if (!string.IsNullOrEmpty(sessionValue))
     {
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
@@ -24,7 +29,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                            @{
-                                var sessionId = Request.Query["session_id"];
+                                var sessionId = Context.Session.GetString("session_id");
                             }
 
                             <li class="nav-item">
