--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,13 +33,13 @@
                             }
 
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Patients" asp-action="Index" asp-route-session_id="@sessionId">Pacientes</a>
+                                <a class="nav-link" href="/Patients?session_id=@sessionId">Pacientes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Index" asp-route-session_id="@sessionId">Citas</a>
+                                <a class="nav-link" href="/Appointments?session_id=@sessionId">Citas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Index" asp-route-session_id="@sessionId">Administradores</a>
+                                <a class="nav-link" href="/Admin?session_id=@sessionId">Administradores</a>
                             </li>
 
                             <li class="nav-item">
