--- a/Views/Admin/Details.cshtml
+++ b/Views/Admin/Details.cshtml
@@ -1,4 +1,5 @@
 @model PatientManagementSystem.Models.Admin
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -14,7 +15,9 @@
         <dt class="col-sm-2">Email</dt>
         <dd class="col-sm-10">@Model.Email</dd>
     </dl>
-
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Editar</a>
-    <a asp-action="Index" class="btn btn-secondary">Volver a la listat</a>
+@{
+            var sessionValue = HttpContextAccessor.HttpContext?.Session?.GetString("AdminLoggedIn");
+            }   
+    <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-session_id="@sessionValue" class="btn btn-warning">Editar</a>
+    <a asp-action="Index" class="btn btn-secondary" asp-route-session_id="@sessionValue">Volver a la listado</a>
 </div>
